--- a/pass.html
+++ b/pass.html
@@ -1,53 +1,40 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title> 
-        Assignment_06 </title>
-</head>
-
+ <head>
+     <title>Assignment_06</title>
+ </head>
 <body>
-    <h2> <b>Pass Phase by Sai Pranay Siddam</h1><b></h2>
-    <form><br><br>
-        <label for="Secret ">Enter the Secret Phrase</label>
-        <input type="password" id="Secret" value="Let me in"><br><br><br>
-
-        <label for="Check ">Enter a Phrase</label>
-        <input type="text" id="Check" value="Let me in"><br><br><br>
-
-        <input type="button" onclick="processPhrase()" value="Check the phrase">
-
-    </form>
-    <br><br>
-    <p id="result">Result</p>
-    <script>
-
-        function processPhrase() {
-            
-            var correct = 0;
-            var wrong = 0;
-            var result;
-            secret = document.getElementById("Secret").value;
-            check = document.getElementById("Check").value;
-            out = document.getElementById("result")
-
-              if (secret==check) {
-
-                correct = correct + 1;
-                alert("Access allowed");
-               out.innerHTML="Correct Count:"+correct
+<h2>Pass phrase by Sai Pranay Siddam</h2>
+<form>
+    <input type="button" onclick="processPhrase()" value="Check the phrase">
+</form>
 
 
-             } else {
-                wrong = wrong + 1;
-                alert("Access denied");
-                out.innerHTML="Wrong Count:"+wrong
+<p id="result">This text will be replaced </p>
+    <label for="form1_phrase">Enter the secret phrase </label>
+    <input type ="password" id="form1_phrase" name="form1_phrase" step=2 value="Let me in">
+     <br><br/>
+    <label for="form1_check">Enter a phrase </label>
+    <input type ="text" id="form1_check" name="form1_check" autofocus> <br>
+     <br/>
 
-            }
-
-        }//
-    </script>
-
+<script> 
+let correct = 0, wrong = 0;
+function processPhrase(){
+    console.log("Getting form values")
+    secretphrase = document.getElementById("form1_phrase").value
+    phrase = document.getElementById("form1_check").value
+    out = document.getElementById("result")
+    if(secretphrase === phrase){
+        correct = correct + 1;
+        out.innerHTML = "correct count: "+correct
+        alert("Access allowed");
+    } else {
+        wrong = wrong + 1;
+        out.innerHTML = "wrong count: "+wrong
+        alert("Access denied");
+    }
+}
+</script>
 </body>
-
-</html>
+</html> 
