--- a/car.html
+++ b/car.html
@@ -18,6 +18,17 @@
     <br>
     <input type="button" onclick="orderCar()" value="Order a car">
 </form>
+<br>
+<form>
+   <label for = "property">Enter a property:</label>
+   <input type = "text" id = "property" value = "color"/>
+   <br>
+   <label for = "value">Enter a value:</label>
+   <input type = "text" id = "value" />
+   <br><br>
+   <input type = "button" onclick="updateCar()" value = "Update the car">
+</form>
+<br>
 <p id="resultValue">Selected car details displays here </p>
 <script>
     var my_car={}
@@ -44,6 +55,12 @@ my_car['gps'] = 'false';
 }
 document.getElementById("resultValue").innerHTML = JSON.stringify(my_car);
 
+}
+function updateCar(){
+property = document.getElementById("property").value
+value = document.getElementById("value").value
+my_car[property] = value
+document.getElementById("resultValue").innerHTML = JSON.stringify(my_car);
 }
 </script>
 
