--- a/car.html
+++ b/car.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html>
- <title>Car Page</title>
+ 
+    <head>
+        <title>Car Page</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+ integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
+ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    </head>
 <body>
-<h1>Sai Pranay orders a car</h1>
+    <h1>Sai Pranay orders a car</h1>
 <h2>Getting input</h2>
 
 <form>
-    <label for = "electric">electric</label>
-    <input type="checkbox" id = "electric" value="electric"/>
+    <div class="form-check">
+    <label class="form-label" for = "electric">electric</label>
+    <input class="form-check-input" type="checkbox" id = "electric" value="electric"/>
     <br>
-    <label for = "ac">ac</label>
-    <input type="checkbox" id = "ac" value="ac"/>
+    <label class="form-label" for = "ac">ac</label>
+    <input class="form-check-input" type="checkbox" id = "ac" value="ac"/>
    <br>
-   <label for = "gps">gps</label>
-    <input type="checkbox" id = "gps" value="gps"/>
+   <label class="form-label" for = "gps">gps</label>
+    <input class="form-check-input" type="checkbox" id = "gps" value="gps"/>
+</div>
     <br>
     <br>
-    <input type="button" onclick="orderCar()" value="Order a car">
+    <input class="btn btn-secondary"type="button" onclick="orderCar()" value="Order a car">
 </form>
+
 <br>
 <form>
-   <label for = "property">Enter a property:</label>
-   <input type = "text" id = "property" value = "color"/>
+   <label class="form-label" for = "property">Enter a property:</label>
+   <input class="form-text" type = "text" id = "property" value = "color"/>
    <br>
-   <label for = "value">Enter a value:</label>
-   <input type = "text" id = "value" />
+   <label class="form-label" for = "value">Enter a value:</label>
+   <input class="form-text" type = "text" id = "value" />
    <br><br>
-   <input type = "button" onclick="updateCar()" value = "Update the car">
+   <input class="btn btn-secondary"type = "button" onclick="updateCar()" value = "Update the car">
 </form>
 <br>
 <p id="resultValue">Selected car details displays here </p>
@@ -62,8 +74,8 @@ value = document.getElementById("value").value
 my_car[property] = value
 document.getElementById("resultValue").innerHTML = JSON.stringify(my_car);
 }
+
 </script>
 
 </body>
-
-</html> 
+</html>
