--- a/pass.html
+++ b/pass.html
@@ -2,20 +2,26 @@
 <html>
  <head>
      <title>Assignment_06</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+ integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
+ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
  </head>
 <body>
 <h2>Pass phrase by Sai Pranay Siddam</h2>
 <form>
-    <input type="button" onclick="processPhrase()" value="Check the phrase">
+    <input class="btn btn-information" type="button" onclick="processPhrase()" value="Check the phrase">
 </form>
 
 
 <p id="result">This text will be replaced </p>
-    <label for="form1_phrase">Enter the secret phrase </label>
-    <input type ="password" id="form1_phrase" name="form1_phrase" step=2 value="Let me in">
+    <label class="form-label" for="form1_phrase">Enter the secret phrase </label>
+    <input class="form-text" type ="password" id="form1_phrase" name="form1_phrase" step=2 value="Let me in">
      <br><br/>
-    <label for="form1_check">Enter a phrase </label>
-    <input type ="text" id="form1_check" name="form1_check" autofocus> <br>
+    <label class="form-label" for="form1_check">Enter a phrase </label>
+    <input class="form-text" type ="text" id="form1_check" name="form1_check" autofocus> <br>
      <br/>
 
 <script> 
@@ -34,6 +40,9 @@ function processPhrase(){
         out.innerHTML = "wrong count: "+wrong
         alert("Access denied");
     }
+    if(wrong>3){
+            alert("account blocked")
+        }
 }
 </script>
 <div>
